k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-mart
  labels:
    app: shopping-mart
    environment: production
